--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "uuid": "^9.0.0",
-    "zod": "^3.19.1"
+    "zod": "^3.19.1",
+    "zod-express-middleware": "^1.4.0"
   }
 }
