--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.189",
     "@types/uuid": "^8.3.4",
     "typescript": "^4.8.4"
   },
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "express-file-routing": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.7.2",
     "uuid": "^9.0.0",
     "zod": "^3.19.1",
