--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "npx tsc && node build/index.js",
-    "dev": "npx tsc -w"
+    "dev": "npx tsc -w",
+    "reload": "npx tsc && nodemon build/index.js"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -10,6 +11,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.189",
     "@types/uuid": "^8.3.4",
+    "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
   },
   "dependencies": {
